Trying to solve image streching problem by preventing the default flex stretch

--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -38,7 +38,8 @@ figure.image {
 
 .article figure { 
 	box-sizing: border-box; 
-	display: flex; flex-direction: row; 
+	display: flex; flex-direction: row; align-items: center; 
+	height: auto; 
 	margin-bottom: 1.75rem; margin-top: 1.2rem; 
 	padding: 1.2rem; 
 	background-color: rgba( 255, 255, 255, 0.4 );
